crates/compiler/src/tests/e2e/good/0209_pattern_match_literals/main.gom
fn main() {
    let x: uint8 = 5;
    match x {
        _ => println("ok"),
    };
}
