crates/compiler/src/tests/e2e/bad/0015_enum_assigned_wrong_type/main.gom
enum Status {
  Active,
  Inactive,
  Pending,
}

fn main() -> unit {
  let code: int32 = 1;
  match code {
    Status::Active => println("active"),
    Status::Inactive => println("inactive"),
    _ => println("unknown"),
  }
}
